<resources>
    <string name="app_name">My Application</string>
    <string name="input_text">Input:</string>
    <string name="output_value">Output:</string>
    <string name="Input_number">Input Number</string>
    <string name="display_text">Calculations:</string>
    <string name="restart_button">RESTART</string>
    <string name="calculations_text" />
    <string name="convert_button">Calculate</string>
    <string name="welcomeText">WELCOME</string>
    <string name="start_button">START</string>
    <string name="instructions">Hello! Welcome to our app! When you see the conversion part of our application, input your number and through the drop down menu, pick your units. Press calculate to see the full calculation of the conversion of units</string>
    <string name="expand">EXPAND</string>


    <string-array name="units_array">
        <item>km</item>
        <item>hm</item>
        <item>dam</item>
        <item>m</item>
        <item>dm</item>
        <item>cm</item>
        <item>mm</item>
    </string-array>
</resources>
